--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -178,3 +178,54 @@ summary.training {
       margin-top: 2em;
       border-left: 0.2em solid $primary;
   }
+  
+blockquote {
+    border-left: 0.2em solid $primary;
+    padding-left: 2em;
+    margin: 1rem 1rem 2rem 1.5rem;
+    
+   // &:before {
+    //    content: '';
+    //}
+    //&:after {
+    //    content: "'";
+   // }
+    .blockquote-source {
+        padding-top: 1rem;
+        font-style: oblique;
+        font-size: $font-size-base * 0.9;
+    }
+}
+
+.podcast {
+    background-color: $gray-300 !important;
+    border-radius: 20px;
+    margin: 1em 0;
+    
+    .interview-col {
+        padding: 0.5em;
+        font-style: oblique;
+        font-size: $font-size-base * 0.8;
+    }
+    
+    .podcast-audio-col {
+        padding: 0.5em;
+    }
+}
+
+img.podcast-thumb  {
+    border-radius: 20px;
+    padding: 0.5em;
+}
+
+.iframe-wrapper {
+    position: relative;
+    padding-bottom: 75% // 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */ 
+}
+iframe.talk {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
