--- a/layouts/shortcodes/iframe.html
+++ b/layouts/shortcodes/iframe.html
@@ -1,3 +1,3 @@
- <div class="iframe-wrapper">
+ <div class="iframe-wrapper{{ with .Get "class" }}{{ . }}{{ end }}" >
     <iframe class="talk" src="{{ .Get 0 }}" frameborder="0" width="100%" height="100%"></iframe>
 </div>
