--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,7 @@
 // Font
 // @import url('https://fonts.googleapis.com/css?family=Lato:400|Open+Sans:400,700');
 
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Ubuntu+Mono:wght@400;700&family=Work+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Ubuntu+Mono:wght@400;700&family=Work+Sans:wght@300;400;500&display=swap');
 
 // Bootstrap
 @import 'bootstrap/functions';
