--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
 {{ $reusablePages := sort $reusablePages ".Params.weight" }}
 {{ range first 1 $reusablePages }}
 <div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('{{ .Params.background | relURL }}');">
-  <div class="container pt-17 pb-17">
+  <div class="container pt-3 pb-8 pb-md-14 pt-md-14">
     <div class="row">
       <div class="col-12 col-md-6">
           <img src="images/Rlogo-turq.png" width="80%"/>
